# Fractal

./: .gitignore  CMakeLists.txt  README.md  feh_003815_000001_filelist  in  main.cpp
fract.bin_autogen/: moc_predefs.h
ocl_src/: frac.c
src/: .#OpenCLWrapper.hpp  Image.cpp  Image.hpp  OpenCLWrapper.hpp  Parse.cpp  Parser.cpp  Parser.hpp  main.cpp  test.qml
src/qml/: test.qml  test.qmlc
